Docker-Compose.yml, Query SQL, Projection, GET games by list